@@ -5,7 +5,7 @@ use Config;
 &check_kit;
 
 my $libdir; my $bindir; my $man1dir; my $man3dir; my $comment; my $perlbin;
-my $version = '2.09';
+my $version = '2.11';
 ($libdir, $bindir, $man1dir, $man3dir) = &defaults();
 
 if (! -t STDIN) {  # not interactive, use defaults ...
@@ -257,12 +257,12 @@ sub check_kit {
 
 	my %file_sizes = (
 		'README', 1306,
-		'Changes', 1642,
+		'Changes', 1737,
 		'MANIFEST', 72,
 		'Tea.pm', 31524,
 		'bin/tea', 3109,
 		'examples/tea_demo.cgi', 4610,
-		'Clui', 27404,
+		'Clui', 27374,
 		'test.pl', 10708,
 	);
 
